--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 <!-- Src Test -->
-<script src="src/osbPocketPoke.directive.js"></script>
-<script src="src/osbPocketPoke.directive.tpl.js"></script>
+<script src="src/js/osbPocketPoke.directive.js"></script>
+<script src="src/js/osbPocketPoke.directive.tpl.js"></script>
 <!-- Dist Test -->
 <!--<script src="dist/osbPocketPoke.js"></script>-->
 <script>
