--- a/src/osbPocketPoke.tpl.html
+++ b/src/osbPocketPoke.tpl.html
@@ -4,10 +4,10 @@
     </header>
     <section class="pokeDex">
         <ul class="pokeList list-unstyled">
-            <li ng-repeat="#poke in pokemon">
+            <li ng-repeat="poke in pokemon">
                 <div id="sprite-{{poke.name}}" class="img-holder text-center">
                     <div class="typeHolder">
-                        <div ng-repeat="#type of poke.types" class="typeIcon type-{{type.type.name}}" title="Type: {{type.type.name}}">
+                        <div ng-repeat="type in poke.types" class="typeIcon type-{{type.type.name}}" title="Type: {{type.type.name}}">
                             <i class="poke-icon poke-icon-{{type.type.name}}"></i>
                         </div>
                     </div>
@@ -17,19 +17,19 @@
                 <p><strong>Height:</strong> {{ poke.height }} | <strong>Weight:</strong> {{ poke.weight }} | <strong>Base XP:</strong> {{ poke.base_experience }}</p>
                 <h4 ng-click="poke.statsVisible = !poke.statsVisible" class="details">Attributes <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.statsVisible, 'fa-chevron-up' : poke.statsVisible}"></i></h4>
                 <ul class="list-unstyled details-list" [hidden]="!poke.statsVisible">
-                    <li ng-repeat="#stats in poke.stats">
+                    <li ng-repeat="stats in poke.stats">
                         <p><strong>{{stats.stat.name}}</strong> <span class="pull-right">{{stats.base_stat}}</span></p>
                     </li>
                 </ul>
                 <h4 ng-click="poke.abilitiesVisible = !poke.abilitiesVisible" class="details">Abilities <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.abilitiesVisible, 'fa-chevron-up' : poke.abilitiesVisible}"></i></h4>
                 <ul class="list-unstyled details-list" [hidden]="!poke.abilitiesVisible">
-                    <li ng-repeat="#ability in poke.abilities">
+                    <li ng-repeat="ability in poke.abilities">
                         <p>{{ability.ability.name}}</p>
                     </li>
                 </ul>
                 <h4 ng-click="poke.movesVisible = !poke.movesVisible" class="details">Moves <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.movesVisible, 'fa-chevron-up' : poke.movesVisible}"></i></h4>
                 <ul class="list-unstyled details-list moves" [hidden]="!poke.movesVisible">
-                    <li ng-repeat="#move in poke.moves">
+                    <li ng-repeat="move in poke.moves">
                         <p>{{move.move.name}} <i class="fa fa-star"></i></p>
                     </li>
                 </ul>
