--- a/src/osbPocketPoke.tpl.html
+++ b/src/osbPocketPoke.tpl.html
@@ -16,19 +16,19 @@
                 <h2>{{ poke.name }} <span class="pull-right"><i class="poke-icon poke-icon-pokeball-open"></i></span></h2>
                 <p><strong>Height:</strong> {{ poke.height }} | <strong>Weight:</strong> {{ poke.weight }} | <strong>Base XP:</strong> {{ poke.base_experience }}</p>
                 <h4 ng-click="poke.statsVisible = !poke.statsVisible" class="details">Attributes <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.statsVisible, 'fa-chevron-up' : poke.statsVisible}"></i></h4>
-                <ul class="list-unstyled details-list" [hidden]="!poke.statsVisible">
+                <ul class="list-unstyled details-list" ng-hide="!poke.statsVisible">
                     <li ng-repeat="stats in poke.stats">
                         <p><strong>{{stats.stat.name}}</strong> <span class="pull-right">{{stats.base_stat}}</span></p>
                     </li>
                 </ul>
                 <h4 ng-click="poke.abilitiesVisible = !poke.abilitiesVisible" class="details">Abilities <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.abilitiesVisible, 'fa-chevron-up' : poke.abilitiesVisible}"></i></h4>
-                <ul class="list-unstyled details-list" [hidden]="!poke.abilitiesVisible">
+                <ul class="list-unstyled details-list" ng-hide="!poke.abilitiesVisible">
                     <li ng-repeat="ability in poke.abilities">
                         <p>{{ability.ability.name}}</p>
                     </li>
                 </ul>
                 <h4 ng-click="poke.movesVisible = !poke.movesVisible" class="details">Moves <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.movesVisible, 'fa-chevron-up' : poke.movesVisible}"></i></h4>
-                <ul class="list-unstyled details-list moves" [hidden]="!poke.movesVisible">
+                <ul class="list-unstyled details-list moves" ng-hide="!poke.movesVisible">
                     <li ng-repeat="move in poke.moves">
                         <p>{{move.move.name}} <i class="fa fa-star"></i></p>
                     </li>
