--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+<script src="bower_components/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
 <!-- Src Test -->
 <script src="src/osbPocketPoke.directive.js"></script>
 <script src="src/osbPocketPoke.directive.tpl.js"></script>
