Fixing unicode issue and tidy up

--- a/src/osbPocketPoke.tpl.html
+++ b/src/osbPocketPoke.tpl.html
@@ -1,6 +1,6 @@
 <main class="osb-pocket-poke-holder">
     <header class="container">
-        <h1><i class="poke-icon poke-icon-pokeball"></i> PocketPoké</h1>
+        <h1><i class="poke-icon poke-icon-pokeball"></i> PocketPok&#x00E9;</h1>
     </header>
     <section class="pokeDex">
         <ul class="pokeList list-unstyled">
