--- a/src/osbPocketPoke.tpl.html
+++ b/src/osbPocketPoke.tpl.html
@@ -4,7 +4,7 @@
         <nav>
             <ul class="list-unstyled list-inline">
                 <li><button class="btn btn-primary" ng-click="navHidden = !navHidden"><i class="fa fa-bars"></i></button></li>
-                <li ng-if="!navHidden"><button class="btn btn-primary" ng-click="sectionDisplay = 'pokemon'"><i class="poke-icon poke-icon-pokeball-open"></i> Pokémon</button></li>
+                <li ng-if="!navHidden"><button class="btn btn-primary" ng-click="sectionDisplay = 'pokemon'"><i class="poke-icon poke-icon-pokeball-open"></i> Pok&#x00E9;mon</button></li>
                 <li ng-if="!navHidden"><button class="btn btn-primary" ng-click="getLocations()"><i class="fa fa-map-marker"></i> Locations</button></li>
                 <li ng-if="!navHidden"><button class="btn btn-primary" ng-click="getEvolutionChain()"><i class="poke-icon poke-icon-strain"></i> Evolution</button></li>
                 <li ng-if="!navHidden"><button class="btn btn-primary" ng-click="getBerries()"><i class="poke-icon poke-icon-berry"></i> Berries</button></li>
