--- a/src/osbPocketPoke.tpl.html
+++ b/src/osbPocketPoke.tpl.html
@@ -18,7 +18,7 @@
             <li ng-repeat="location in locationData" class="pokeListItem">
                 <h3>{{ location.name }}</h3>
                 <p>Region: {{ location.region.name }}</p>
-                <h4 ng-click="areasHidden = !areasHidden">Areas: <span class="pull-right"><i class="fa" [ngClass]="{'fa-angle-down' : areasHidden, 'fa-angle-up' : !areasHidden}"></i></span></h4>
+                <h4 ng-click="areasHidden = !areasHidden">Areas: <span class="pull-right"><i class="fa" ng-class="{'fa-angle-down' : areasHidden, 'fa-angle-up' : !areasHidden}"></i></span></h4>
                 <ul>
                     <li ng-repeat="area in location.areas">{{ area.name }}</li>
                 </ul>
@@ -67,19 +67,19 @@
                 </div>
                 <h2>{{ poke.name }} <span class="pull-right"><i class="poke-icon poke-icon-pokeball-open"></i></span></h2>
                 <p><strong>Height:</strong> {{ poke.height }} | <strong>Weight:</strong> {{ poke.weight }} | <strong>Base XP:</strong> {{ poke.base_experience }}</p>
-                <h4 ng-click="poke.statsVisible = !poke.statsVisible" class="details">Attributes <i class="fa pull-right" [ngClass]="{'fa-chevron-down' : !poke.statsVisible, 'fa-chevron-up' : poke.statsVisible}"></i></h4>
+                <h4 ng-click="poke.statsVisible = !poke.statsVisible" class="details">Attributes <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.statsVisible, 'fa-chevron-up' : poke.statsVisible}"></i></h4>
                 <ul class="list-unstyled details-list" ng-hide="!poke.statsVisible">
                     <li ng-repeat="stats in poke.stats">
                         <p><strong>{{stats.stat.name}}</strong> <span class="pull-right">{{stats.base_stat}}</span></p>
                     </li>
                 </ul>
-                <h4 ng-click="poke.abilitiesVisible = !poke.abilitiesVisible" class="details">Abilities <i class="fa pull-right" [ngClass]="{'fa-chevron-down' : !poke.abilitiesVisible, 'fa-chevron-up' : poke.abilitiesVisible}"></i></h4>
+                <h4 ng-click="poke.abilitiesVisible = !poke.abilitiesVisible" class="details">Abilities <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.abilitiesVisible, 'fa-chevron-up' : poke.abilitiesVisible}"></i></h4>
                 <ul class="list-unstyled details-list" ng-hide="!poke.abilitiesVisible">
                     <li ng-repeat="ability in poke.abilities">
                         <p>{{ability.ability.name}}</p>
                     </li>
                 </ul>
-                <h4 ng-click="poke.movesVisible = !poke.movesVisible" class="details">Moves <i class="fa pull-right" [ngClass]="{'fa-chevron-down' : !poke.movesVisible, 'fa-chevron-up' : poke.movesVisible}"></i></h4>
+                <h4 ng-click="poke.movesVisible = !poke.movesVisible" class="details">Moves <i class="fa pull-right" ng-class="{'fa-chevron-down' : !poke.movesVisible, 'fa-chevron-up' : poke.movesVisible}"></i></h4>
                 <ul class="list-unstyled details-list moves" ng-hide="!poke.movesVisible">
                     <li ng-repeat="move in poke.moves">
                         <p><i class="fa fa-star"></i> {{move.move.name}}</p>
